# zeke

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.circleci/: config.yml
benchmarking/: benchmark.sh
benchmarking/results/: 0_6_0.md  README.md
src/: cli.rs  config.rs  content.rs  front_matter.rs  frontmatter.rs  fs.rs  lib.rs  main.rs  note.rs
src/subcommands/: backlink.rs  config.rs  graph.rs  link.rs  mod.rs  mv.rs  new.rs  tag.rs  tags.rs  unlink.rs  untag.rs
tests/: common.rs  integration-tests.rs  tester.rs
tests/data/subcommands/test_backlink/does_not_find_links_in_gitignored_files_if_git/: 20201223-a.md  20201223-b.md
tests/data/subcommands/test_backlink/does_not_find_links_in_hidden_files/: .20201223-a.md  20201223-b.md
tests/data/subcommands/test_backlink/does_not_find_links_in_ignored_files/: .ignore  20201223-a.md  20201223-b.md
tests/data/subcommands/test_backlink/does_not_modify_other_parts_of_linked_notes/: 20201024-a.md  20201024-b.md
tests/data/subcommands/test_backlink/finds_links_in_gitignored_files_if_no_git/: 20201223-a.md  20201223-b.md
tests/data/subcommands/test_backlink/idempotent/: 20201024-a.md  20201024-b.md
tests/data/subcommands/test_backlink/links_notes_referenced_by_other_notes/: 20201024-a.md  20201024-b.md  20201024-c.md
tests/data/subcommands/test_backlink/only_finds_links_in_markdown_files/: 20201024-a.txt  (+1 more)
tests/subcommands/: mod.rs  test_backlink.rs  test_graph.rs  test_link.rs  test_list.rs  test_ls.rs  test_mv.rs  test_new.rs  test_tag.rs  test_tags.rs  test_unlink.rs  test_untag.rs
(+33 files in other folders)
