[package]
name = "zeke"
version = "0.7.0"
authors = ["Nick Willett-Jeffries <nwillettjeffries@gmail.com>"]
edition = "2021"
description = "A CLI for managing notebooks or knowledge-bases built on a local folder of Markdown files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"

[dev-dependencies]
