[package]
name = "zeke"
version = "0.7.0"
authors = ["Nick Willett-Jeffries <nwillettjeffries@gmail.com>"]
description = "A command-line note-taking assistant"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "2.0.16"
